[package]
name = "wasm_backtrace"
description = "Print backtraces within WASM"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
repository = "https://github.com/ISibboI/wasm_backtrace"
version = "0.1.1"
edition = "2024"
license = "BSD-2-Clause"

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.100"
